--- a/html/index.pug
+++ b/html/index.pug
@@ -17,7 +17,7 @@ html
                 li.navigation__list-item
                     a.navigation__links(href="http://") Location
                 li.navigation__list-item
-                    a.navigation__links(href="http://") Ticket prizes
+                    a.navigation__links(href="http://") Ticket prices
                 li.navigation__list-item
                     a.navigation__links(href="http://") Contact
                 li.navigation__list-item
@@ -30,10 +30,9 @@ html
                 li.navigation__list-item
                     a.navigation__links(href="http://") Location
                 li.navigation__list-item
-                    a.navigation__links(href="http://") Ticket prizes
+                    a.navigation__links(href="http://") Ticket prices
                 li.navigation__list-item
                     a.navigation__links(href="http://") Contact
-            
         label.hamburger-menu
             span.hamburger-menu__bar
         .login-wrapper
