--- a/css/style.css
+++ b/css/style.css
@@ -59,11 +59,11 @@ body {
 }
 
 .hamburger-menu.is-active::after{
-    transform: rotate(-45deg) translate(6.4px, -9px);
+    transform: rotate(-45deg) translate(6px, -9px);
 }
 
 .hamburger-menu.is-active::before{
-    transform: rotate(45deg) translate(0px, 3px);
+    transform: rotate(45deg) translate(1px, 3px);
 }
 
 .hamburger-menu.is-active .hamburger-menu__bar{
@@ -119,8 +119,13 @@ body {
 }
 .login-wrapper  h1{
     text-align: center;
+    margin-top: 3em;
 }
 
+.sign-up-wrapper  h1{
+    text-align: center;
+    margin-top: 3em;
+}
 #submit{
     width: 20em;
     height: 4em; 
@@ -139,22 +144,24 @@ body {
     transition: 1s;
 }
 
-.login-wrapper{
+.login-wrapper, .sign-up-wrapper{
     background-color: rgba(255, 255, 255, .5);
-    height: 100vh;
+    height: 70vh;
     text-align: center;
     padding-top: 1em;
     transform: scale(0,0);
     transform-origin: top;
     transition: transform 350ms ease-in-out;
-    margin-top: 4.3em;
+    margin-top: 4.4em;
+    border-radius: 3em;
 }
 
 .transformed{
     transform: scale(1,1);
+    overflow-y: hidden;
 }
 
-#username, #password{
+#username, #password, #signup-username, #signup-password, #signup-date-of-birth, #signup-name, #signup-email{
     padding: 0 5px;
     height: 40px;
     margin: 1em;
@@ -167,6 +174,15 @@ body {
     border-right: none;
 }
 
+.sign-up-background{
+    background-color: white;
+    width: 100%;
+    height: auto;
+}
+.sign-up-close{
+    float: right;
+    width: 4em;
+}
 .navigation--desktop{
     display: flex;
     align-items: center;
