--- a/html/index.pug
+++ b/html/index.pug
@@ -22,7 +22,7 @@ html
                     a.navigation__links(href="http://") Contact
                 li.navigation__list-item
                     a.login-link.navigation__links(href="http://") Login
-            
+            img.login-icon(src="/images/login_icon.png", alt="Login Icon")
         nav.navigation.navigation--mobile
             ul.navigation__list 
                 li.navigation__list-item
@@ -33,21 +33,37 @@ html
                     a.navigation__links(href="http://") Ticket prices
                 li.navigation__list-item
                     a.navigation__links(href="http://") Contact
-            img.login-icon(src="/images/login_icon.png", alt="Login Icon")
         label.hamburger-menu
             span.hamburger-menu__bar
-        .login-wrapper
-            h1 Login
-            form.login-wrapper__form(method="post")  
-                div  
-                    ion-icon(name="person-outline")       
-                    input#username(type="text" required placeholder="Username")   
-                div
-                    ion-icon(name="lock-closed-outline") 
-                    input#password(type="password" name="password" minlength="8" required placeholder="Password")
-                input#submit(type="submit" value="Login")
-                p Not a member? 
-                    a(href="#") Sign up
+        article 
+            .login-wrapper
+                h1 Login
+                form.login-wrapper__form(method="post")  
+                    div  
+                        ion-icon(name="person-outline")       
+                        input#username(type="text" required placeholder="Username")   
+                    div
+                        ion-icon(name="lock-closed-outline") 
+                        input#password(type="password" name="password" minlength="8" required placeholder="Password")
+                    input#submit(type="submit" value="Login")
+                    p Not a member? 
+                        a.sign-up-link(href="#") Sign up
+            .sign-up-background
+                .sign-up-wrapper
+                    h1 Sign up
+                    form.sign-up-wrapper__form(method="post")  
+                        div 
+                            input#signup-name(type="text" required placeholder="Full Name")
+                        div 
+                            
+                            input#signup-date-of-birth(type="date" required)
+                        div 
+                            input#signup-email(type="email" required placeholder="E-Mail")
+                        div        
+                            input#signup-username(type="text" required placeholder="Username")   
+                        div
+                            input#signup-password(type="password" name="password" minlength="8" required placeholder="Password")
+                        input#submit(type="submit" value="Sign up!")
         script(type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js")
         script(nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js")
         script(src="/js/main.js")  
