--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,7 @@ body,html{
 }
 
 body {
-    background-color: green;
-    background-size: cover;
+    background-color: rgb(32, 83, 102);
     font-family: "Montserrat";
     color: white;
     margin-bottom: 0;
@@ -117,45 +116,14 @@ body {
     border: 2px solid white;
     border-radius: .5em;
 }
-
-.login-wrapper  h1{
-    text-align: center;
-    margin-top: 3em;
-}
-
-.sign-up-wrapper  h1{
-    text-align: center;
-    margin-top: 3em;
-}
-
-#submit{
-    width: 20em;
-    height: 4em; 
-    border: 3px solid green;
-    border-radius: 1em;
-    background-color: rgba(0,255,0,0.1);
-    
-    margin: .5em;
+.navigation__links, .login-link{
     color: white;
-    font-size: 1em;
-    font-weight: bolder;
+    transition: color .5s;
 }
 
-#submit:hover{
-    background-color: rgba(0,255,0,0.6);
-    transition: 1s;
-}
-
-.login-wrapper, .sign-up-wrapper{
-    background-color: rgba(255, 255, 255, .5);
-    height: 70vh;
-    text-align: center;
-    padding-top: 1em;
-    transform: scale(1,1);
-    transform-origin: top;
-    transition: transform 350ms ease-in-out;
-    margin-top: 4.4em;
-    border-radius: 3em;
+.navigation__links:hover, .login-link:hover{
+    color: rgba(63, 171, 210, 1);
+    border-color: rgba(63, 171, 210, 1);
 }
 
 .transformed{
@@ -163,23 +131,6 @@ body {
     overflow-y: hidden;
 }
 
-#username, #password, #signup-username, #signup-password, #signup-date-of-birth, #signup-name, #signup-email{
-    padding: 0 5px;
-    height: 40px;
-    margin: 1em;
-    background: none;
-    outline: none;
-    border-bottom: 3px solid gray;
-    border-radius: .5em;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-}
-
-.sign-up-close{
-    float: right;
-    width: 4em;
-}
 .navigation--desktop{
     display: flex;
     align-items: center;
@@ -188,6 +139,7 @@ body {
     padding: 0;
     height: 4.4em;
     border-bottom: 1.5px solid white;
+    z-index: 1;
 }
 
 .navigation--desktop .navigation__list{
@@ -203,10 +155,90 @@ body {
     text-align: center;
 }
 
-.login-icon, .login-icon-link{
+.login-icon__button, .login-icon-link{
     width: 2.8125em;
     margin-left: auto;
     margin-right: 5em; 
+    color: white;
+    transition: 1s;
+}
+
+.login-icon__button{
+    font-size: 2em;
+    margin-top: .2em;
+}
+
+.login-icon__button:hover{
+    color: rgba(63, 171, 210, 1);
+}
+
+.featured-background{
+    margin-top: 4.4em;
+    height: 45em; 
+    background:  linear-gradient(180deg, rgba(63, 171, 210, 1) 0%, rgba(32, 83, 102,1) 100%);
+    overflow-y: hidden;
+}
+
+.featured__image{
+    margin-top: 2em;
+    border-radius: 3em;
+    width: 100em;
+    display: block;
+    margin-left:auto;
+    margin-right:auto;
+    overflow: hidden;
+    transform: scale(0.9, 0.9);
+    transition: 1s all ease-in-out; 
+}
+.featured__image:hover{
+    transform: scale(1);
+}
+
+.movie-card{
+    height: 20em;
+    width: 40em;
+    background-color: white;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    display: block;
+    margin-left:auto;
+    margin-right:auto;
+
+}
+
+.movie-card__bottom{
+    background-color: rgb(227, 226, 226);
+    position: absolute;
+    width: 40em;
+    height: 3.3em;
+}
+
+.pagination {
+    width: 20em;
+    height: 10em;
+    display: block;
+    margin:auto;
+
+}
+ 
+.pagination__link{
+    color: white;
+    float: left;
+    
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .8s;
+    border-radius: 6px;
+    border: 2px solid white;
+    margin: 3px;
+}
+
+.pagination__link:hover{
+    background-color: rgba(63, 171, 210, 1);;
+}
+
+.active{
+    background-color: rgba(63, 171, 210, 1);;
 }
 @media(min-width: 1021px){
     .hamburger-menu{
@@ -215,11 +247,25 @@ body {
     .navigation--mobile{
         display: none;
     }
-    .login-icon{
-        display: none;
+    .login-icon__button{
+        display: none !important;
     }
 }
 
+@media(max-width: 1646px){
+    .featured__image{
+        width: 80em;
+    }
+}
+
+@media(max-width: 1340px){
+    .featured__image{
+        width: 60em;
+    }
+    .featured-background{
+        height: 33.5em;   
+    }
+}
 @media(max-width: 1020px){
     .navigation--desktop{
         display: absolute;
@@ -229,5 +275,35 @@ body {
     }
     .navigation--desktop .navigation__list-item{
         display: none;
+    }
+    .featured__image{
+        width: 50em;
+    }
+    .movie-card{
+        width: 20em;
+    }
+    .movie-card__bottom{
+        width: 20em;
+    }
+    .featured-background{
+     height: 28.5em;   
+    }
+}
+
+@media(max-width: 850px){
+    .featured__image{
+        width: 40em;
+    }
+    .featured-background{
+        height: 23.5em;   
+    }
+}
+
+@media(max-width: 680px){
+    .featured__image{
+        width: 24em;
+    }
+    .featured-background{
+        height: 18.5em;   
     }
 }
