--- a/html/index.pug
+++ b/html/index.pug
@@ -4,13 +4,14 @@ html
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, maximum-scale=1.0")
         meta(name="description" content="Starlight Cinema, a movie theater in the located in Utrecht.")
-        title Starlight Cinema
+        title Seaside Cinema
         link(rel="stylesheet", href="/css/main.css")
-        link(rel="icon", href="/images/star_logo.png" type="image/icon")  
+        link(rel="icon", href="/images/logo.png" type="image/icon")  
         link(href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet")
     body
         nav.navigation.navigation--desktop
-            img.navigation__theater-logo(src="/images/theater_logo.png", alt="Logo of the Starlight Cinema")
+            a(href="/html/index.html") 
+                img.navigation__theater-logo(src="/images/logo.png", alt="Logo of the Starlight Cinema") 
             ul.navigation__list
                 li.navigation__list-item
                     a.navigation__links(href="http://") Home
@@ -23,7 +24,7 @@ html
                 li.navigation__list-item
                     a.login-link.navigation__links(href="/html/login.html") Login
             a.login-icon-link(href="/html/login.html")
-                img.login-icon(src="/images/login_icon.png", alt="Login Icon")
+                i.login-icon__button(class="fa-solid fa-user")
         nav.navigation.navigation--mobile
             ul.navigation__list 
                 li.navigation__list-item
@@ -36,8 +37,42 @@ html
                     a.navigation__links(href="http://") Contact
         label.hamburger-menu
             span.hamburger-menu__bar
-        article
+        header
+            .featured-background
+                img.featured__image(src="/images/spirited_away.jpg", alt="Poster of the Movie Her")
+        .movie-card
+            .movie-card__bottom
+        .movie-card
+            .movie-card__bottom
+        .movie-card
+            .movie-card__bottom
+        .movie-card
+            .movie-card__bottom
+        .movie-card
+            .movie-card__bottom
+        .movie-card
+            .movie-card__bottom
+        .movie-card
+            .movie-card__bottom
+        .movie-card
+            .movie-card__bottom
+        .movie-card
+            .movie-card__bottom
+        .movie-card
+            .movie-card__bottom
+        .movie-card
+            .movie-card__bottom
+        .movie-card
+            .movie-card__bottom 
+        .pagination 
+            a.pagination__link.active(href="#") 1
+            a.pagination__link(href="#") 2  
+            a.pagination__link(href="#") 3 
+            a.pagination__link(href="#") 4  
+            a.pagination__link(href="#") 5  
+            a.pagination__link(href="#") 6  
         script(type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js")
         script(nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js")
+        script(src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous")
         script(src="/js/main.js")  
     footer
