--- a/html/signup.pug
+++ b/html/signup.pug
@@ -29,4 +29,4 @@ html
                     input#submit(type="submit" value="Sign up!")
                     p Already have an account? 
                         a.sign-in-link(href="/html/login.html") Sign in
-        <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
+        script( src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous")
