--- a/html/index.pug
+++ b/html/index.pug
@@ -3,16 +3,16 @@ html
     head
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, maximum-scale=1.0")
-        meta(name="description" content="Starlight Cinema, a movie theater in the located in Utrecht.")
+        meta(name="description" content="Seaside Cinema, a movie theater in the located in Utrecht.")
         title Seaside Cinema
         link(rel="stylesheet", href="/css/main.css")
-        link(rel="icon", href="/images/logo.png" type="image/icon")  
+        link(rel="icon", href= "/images/logo.png" type="image/icon")  
         link(href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet")
     body
         include nav.pug
         header
             .featured-background
-                img.featured__image(src="/images/spirited_away.jpg", alt="Poster of the Movie Her")
+                img.featured__image(src="/images/spirited_away.jpg", alt="Poster of the Movie Spirited Away")
         .movie-card
             .movie-card__bottom
         .movie-card
