--- a/html/login.pug
+++ b/html/login.pug
@@ -3,9 +3,9 @@ html
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, maximum-scale=1.0")
         meta(name="description" content="Starlight Cinema, a movie theater in the located in Utrecht.")
-        title Starlight Cinema
+        title Seaside Cinema
         link(rel="stylesheet", href="/css/login_and_signup.css")
-        link(rel="icon", href="/images/star_logo.png" type="image/icon")  
+        link(rel="icon", href="/images/logo.png" type="image/icon")  
         link(href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet")
     body
         article 
