--- a/css/login_and_signup.css
+++ b/css/login_and_signup.css
@@ -8,7 +8,7 @@ body,html{
 }
 
 body {
-    background-image: url("/images/background_theater.webp");
+    background: linear-gradient(180deg, rgb(100, 165, 189) 0%, rgb(13, 51, 65) 50%);
     background-size: cover;
     font-family: "Montserrat";
     color: white;
@@ -26,7 +26,7 @@ body {
     height: 4em; 
     border: 3px solid white;
     border-radius: 1em;
-    background-color: rgba(255,0,0,0.3);
+    background-color: rgba(13, 51, 65, 0.6);
     
     margin: .5em;
     color: white;
@@ -37,11 +37,11 @@ body {
 }
 
 #submit:hover{
-    background-color: rgba(255,0,0,0.6);
+    background-color: rgba(100, 165, 189,0.6);
 }
 
 .login-wrapper, .sign-up-wrapper{
-    background: linear-gradient(315deg, rgba(253,29,29,1) 0%, rgba(221,220,222,1) 50%, rgba(252,176,69,1) 100%);
+    background:linear-gradient(180deg, rgb(100, 165, 189) 0%, rgba(221,220,222,1) 50%, rgb(13, 51, 65) 100%);
     height: 70%;
     width: 40vw;
     text-align: center;
@@ -96,7 +96,7 @@ body {
 }
 
 .back-button__link:hover{
-    color: rgba(255,0,0,0.4);
+    color: rgba(13, 51, 65, 0.6);
 }
 
 @media(max-width: 900px){
