--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,7 @@ body {
     color: rgba(63, 171, 210, 1);
 }
 
+
 .featured-background{
     margin-top: 4.4em;
     height: 45em; 
@@ -189,36 +190,19 @@ body {
     overflow: hidden;
     transform: scale(0.9, 0.9);
     transition: 1s all ease-in-out; 
+    -moz-box-shadow: 0 0 50px #fff;
+    -webkit-box-shadow: 0 0 50px #fff;
+    box-shadow: 0px 0px 30px #fff;
 }
 .featured__image:hover{
     transform: scale(1);
 }
 
-.movie-card{
-    height: 20em;
-    width: 40em;
-    background-color: white;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    display: block;
-    margin-left:auto;
-    margin-right:auto;
-
-}
-
-.movie-card__bottom{
-    background-color: rgb(227, 226, 226);
-    position: absolute;
-    width: 40em;
-    height: 3.3em;
-}
-
 .pagination {
     width: 20em;
     height: 10em;
-    display: block;
-    margin:auto;
-
+    display: block;   
+    margin: 5em auto 1em;
 }
  
 .pagination__link{
@@ -249,6 +233,54 @@ body {
     }
     .login-icon__button{
         display: none !important;
+    }
+    .movie-card{
+        display: flex;
+        position: relative;
+    }    
+    .movies-container-one{    
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(180px, auto));
+        gap: 1.5em;
+    }
+    
+    .movie-card__poster{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 1em;
+        transform: scale(1);
+        transition: .5s ease-in-out; 
+    }
+    
+    .movie-card__poster:hover{
+        transform: scale(1.1);
+    }
+
+    .blur{
+        filter: blur(5px);
+    }
+
+    .movie-card__header{
+        position: absolute;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 1.2em;
+        margin-top: 10em;
+        z-index: 5;
+        transform-origin: top; 
+        transform: scale(0);
+        pointer-events: none;
+        transition: .5s;
+        width: 100%;
+        text-align: center;
+    }
+    .transform{
+        margin-top: 1em;
+        transform: scale(1)!important;
     }
 }
 
@@ -283,8 +315,40 @@ body {
         width: 20em;
     }
     .featured-background{
-     height: 28.5em;   
+        height: 28.5em;   
+    }    
+    .movie-card{
+        background-color: white;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        display: grid;
+        margin-left:auto;
+        margin-right:auto;
+        grid-template-columns: 80px 80px 80px 80px;
+        grid-template-rows: 80px 80px 80px 80px;
     }
+    .movie-card__bottom{
+        background-color: rgb(227, 226, 226);
+        grid-row: 4 / 5;
+        grid-column: 1 / 5;
+    }
+    
+    .movie-card__poster{
+        grid-row: 1 / 4;
+        grid-column: 1 / 3;
+        width: 10.1em;
+    }
+    
+    .movie-card__header{
+        color: black;
+        grid-row: 2 / 3;
+        grid-column: 3 / 4;
+        width: 10.1em;
+        margin-left: .5em;
+        margin-top: .6em;
+        font-size: 1em;
+    }
+
 }
 
 @media(max-width: 850px){
@@ -307,9 +371,6 @@ body {
 
 @media(max-width: 400px){
     .featured__image{
-        width: 16em;
-    }
-    .movie-card__bottom, .movie-card{
-        width: 15em;
+        width: 20em;
     }
 }
