--- a/html/index.pug
+++ b/html/index.pug
@@ -13,30 +13,47 @@ html
         header
             .featured-background
                 img.featured__image(src="/images/spirited_away.jpg", alt="Poster of the Movie Spirited Away")
-        .movie-card
-            .movie-card__bottom
-        .movie-card
-            .movie-card__bottom
-        .movie-card
-            .movie-card__bottom
-        .movie-card
-            .movie-card__bottom
-        .movie-card
-            .movie-card__bottom
-        .movie-card
-            .movie-card__bottom
-        .movie-card
-            .movie-card__bottom
-        .movie-card
-            .movie-card__bottom
-        .movie-card
-            .movie-card__bottom
-        .movie-card
-            .movie-card__bottom
-        .movie-card
-            .movie-card__bottom
-        .movie-card
-            .movie-card__bottom 
+        .movies-container-one              
+            .movie-card
+                img.movie-card__poster(src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg")
+                .movie-card__bottom 
+                h1.movie-card__header Her
+            .movie-card
+                .movie-card__bottom
+                img.movie-card__poster(src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg")
+                h1.movie-card__header Her
+            .movie-card
+                .movie-card__bottom
+                img.movie-card__poster(src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg")
+                h1.movie-card__header Captain America: The First Avenger
+            .movie-card
+                .movie-card__bottom
+                img.movie-card__poster(src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg")
+                h1.movie-card__header Her
+            .movie-card
+                .movie-card__bottom
+                img.movie-card__poster(src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg")
+                h1.movie-card__header Her
+            .movie-card
+                .movie-card__bottom
+                img.movie-card__poster(src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg")
+                h1.movie-card__header Her
+            .movie-card
+                .movie-card__bottom
+                img.movie-card__poster(src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg")
+                h1.movie-card__header Her
+            .movie-card
+                .movie-card__bottom
+                img.movie-card__poster(src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg")
+                h1.movie-card__header Her
+            .movie-card
+                .movie-card__bottom
+                img.movie-card__poster(src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg")
+                h1.movie-card__header Her
+            .movie-card
+                .movie-card__bottom
+                img.movie-card__poster(src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg")
+                h1.movie-card__header Her
         .pagination 
             a.pagination__link.active(href="#") 1
             a.pagination__link(href="#") 2  
