changed to file structure and added the main page posters

--- a/html/index-page-2.pug
+++ b/html/index-page-2.pug
@@ -48,11 +48,11 @@ html
                 img.movie-card__poster
                 h1.movie-card__header 
         .pagination 
-            a.pagination__link.active(href="index.html") 1
-            a.pagination__link(href="index-page-2.html") 2  
+            a.pagination__link(href="index.html") 1
+            a.pagination__link.active(href="index-page-2.html") 2  
         script(type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js")
         script(nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js")
         script(src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous")
         script(src="js/main.js")  
-        script(src="db/database.js")
+        script(src="db/database2.js")
     footer
