--- a/html/nav.pug
+++ b/html/nav.pug
@@ -1,6 +1,6 @@
 nav.navigation.navigation--desktop
-    a(href="/html/index.html") 
-        img.navigation__theater-logo(src="/images/logo.png", alt="Logo of the Starlight Cinema") 
+    a(href="index.html") 
+        img.navigation__theater-logo(src="images/logo.png", alt="Logo of the Starlight Cinema") 
     ul.navigation__list
         li.navigation__list-item
             a.navigation__links(href="http://") Home
@@ -11,11 +11,10 @@ nav.navigation.navigation--desktop
         li.navigation__list-item
             a.navigation__links(href="http://") Contact
         li.navigation__list-item
-            a.login-link.navigation__links(href="/html/login.html") Login
-    a.login-icon-link(href="/html/login.html")
+            a.login-link.navigation__links(href="login.html") Login
+    a.login-icon-link(href="login.html")
         i.login-icon__button(class="fa-solid fa-user")
 nav.navigation.navigation--mobile
-    
     ul.navigation__list 
         li.navigation__list-item
             a.navigation__links(href="http://") Home
