--- a/html/login.pug
+++ b/html/login.pug
@@ -4,14 +4,14 @@ html
         meta(name="viewport" content="width=device-width, maximum-scale=1.0")
         meta(name="description" content="Starlight Cinema, a movie theater in the located in Utrecht.")
         title Seaside Cinema
-        link(rel="stylesheet", href="/css/login_and_signup.css")
-        link(rel="icon", href="/images/logo.png" type="image/icon")  
+        link(rel="stylesheet", href="css/login_and_signup.css")
+        link(rel="icon", href="images/logo.png" type="image/icon")  
         link(href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet")
     body
         article 
             .login-wrapper
                 button.back-button
-                    a.back-button__link(href="/html/index.html")  
+                    a.back-button__link(href="index.html")  
                         i(class="fa-solid fa-angle-left")
                 h1 Login
                 form.login-wrapper__form(method="post")  
@@ -23,8 +23,8 @@ html
                         input#password(type="password" name="password" minlength="8" required placeholder="Password")
                     input#submit(type="submit" value="Login")
                     p Not a member? 
-                        a.sign-up-link(href="/html/signup.html") Sign up
+                        a.sign-up-link(href="signup.html") Sign up
         script(type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js")
         script(nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js") 
         script(src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous")
-        script(src="/js/main.js")  
+        script(src="js/main.js")  
