--- a/html/signup.pug
+++ b/html/signup.pug
@@ -4,14 +4,14 @@ html
         meta(name="viewport" content="width=device-width, maximum-scale=1.0")
         meta(name="description" content="Starlight Cinema, a movie theater in the located in Utrecht.")
         title Seaside Cinema
-        link(rel="stylesheet", href="/css/login_and_signup.css")
-        link(rel="icon", href="/images/logo.png" type="image/icon")  
+        link(rel="stylesheet", href="css/login_and_signup.css")
+        link(rel="icon", href="images/logo.png" type="image/icon")  
         link(href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet")
     body
         article 
             .sign-up-wrapper
                 button.back-button
-                    a.back-button__link(href="/html/index.html")  
+                    a.back-button__link(href="index.html")  
                         i(class="fa-solid fa-angle-left")
                 h1 Sign up
                 form.sign-up-wrapper__form(method="post")  
@@ -28,5 +28,5 @@ html
                         input#signup-password(type="password" name="password" minlength="8" required placeholder="Password")
                     input#submit(type="submit" value="Sign up!")
                     p Already have an account? 
-                        a.sign-in-link(href="/html/login.html") Sign in
+                        a.sign-in-link(href="login.html") Sign in
         script( src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous")
