--- a/public/css/main.css
+++ b/public/css/main.css
@@ -199,15 +199,15 @@ body {
 }
 
 .pagination {
-    width: 20em;
-    height: 10em;
-    display: block;   
-    margin: 5em auto 1em;
+    width: 12em;
+    display: flex;   
+    margin: 5em auto 3em;
+    justify-content: center;
+    width: 100%;
 }
  
 .pagination__link{
     color: white;
-    float: left;
     
     padding: 8px 16px;
     text-decoration: none;
@@ -218,11 +218,11 @@ body {
 }
 
 .pagination__link:hover{
-    background-color: rgba(63, 171, 210, 1);;
+    background-color: rgba(63, 171, 210, 1);
 }
 
 .active{
-    background-color: rgba(63, 171, 210, 1);;
+    background-color: rgba(63, 171, 210, 1);
 }
 @media(min-width: 1021px){
     .hamburger-menu{
@@ -299,8 +299,12 @@ body {
     }
 }
 @media(max-width: 1020px){
+    .navigation--mobile{
+        z-index: 2;
+    }
     .navigation--desktop{
         display: absolute;
+        z-index: 2;
     }
     .navigation--desktop .navigation__links{
         display: none;
@@ -331,12 +335,16 @@ body {
         background-color: rgb(227, 226, 226);
         grid-row: 4 / 5;
         grid-column: 1 / 5;
+        z-index: 1;
     }
     
     .movie-card__poster{
         grid-row: 1 / 4;
         grid-column: 1 / 3;
-        width: 10.1em;
+        height: 100%;
+        width: 100%; 
+        object-fit: cover;
+        z-index: 0;
     }
     
     .movie-card__header{
