movie description pages
Added the ability to see the description of movies on their own pages, although it may be a bit cumbersome.

--- a/html/index-page-2.pug
+++ b/html/index-page-2.pug
@@ -9,43 +9,43 @@ html
         .movies-container-one              
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id11
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id12
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id13
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id14
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id15
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id16
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id17
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id18
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id19
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id20
                 h1.movie-card__header 
         .pagination 
             a.pagination__link(href="index.html") 1
