--- a/html/index.pug
+++ b/html/index.pug
@@ -9,43 +9,43 @@ html
         .movies-container-one              
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id1
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id2
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id3
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id4
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id5
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id6
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id7
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id8
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id9
                 h1.movie-card__header 
             .movie-card
                 .movie-card__bottom
-                img.movie-card__poster
+                img.movie-card__poster#id10
                 h1.movie-card__header 
         .pagination 
             a.pagination__link.active(href="index.html") 1
