--- a/html/nav.pug
+++ b/html/nav.pug
@@ -3,7 +3,7 @@ nav.navigation.navigation--desktop
         img.navigation__theater-logo(src="images/logo.png", alt="Logo of the Starlight Cinema") 
     ul.navigation__list
         li.navigation__list-item
-            a.navigation__links(href="http://") Home
+            a.navigation__links(href="/") Home
         li.navigation__list-item
             a.navigation__links(href="http://") Location
         li.navigation__list-item
@@ -17,7 +17,7 @@ nav.navigation.navigation--desktop
 nav.navigation.navigation--mobile
     ul.navigation__list 
         li.navigation__list-item
-            a.navigation__links(href="http://") Home
+            a.navigation__links(href="/") Home
         li.navigation__list-item
             a.navigation__links(href="http://") Location
         li.navigation__list-item
