--- a/html/signup.pug
+++ b/html/signup.pug
@@ -19,7 +19,7 @@ html
                         input#signup-name(type="text" required placeholder="Full Name")
                     div 
                             
-                        input#signup-date-of-birth(type="date" required)
+                        input#signup-date-of-birth(type="date" required max="01-04-2023")
                     div 
                         input#signup-email(type="email" required placeholder="E-Mail")
                     div        
