login and signup ( needs integration with DB )

--- a/html/signup.pug
+++ b/html/signup.pug
@@ -30,3 +30,4 @@ html
                     p Already have an account? 
                         a.sign-in-link(href="login.html") Sign in
         script( src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous")
+        script(src="signup.js")
