--- a/html/login.pug
+++ b/html/login.pug
@@ -27,4 +27,4 @@ html
         script(type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js")
         script(nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js") 
         script(src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous")
-        script(src="js/main.js")  
+        script(src="login.js")
