--- a/public/css/login_and_signup.css
+++ b/public/css/login_and_signup.css
@@ -21,7 +21,7 @@ body {
     margin-bottom: .5em;
 }
 
-#submit{
+#submit, #confirm-button{
     width: 20em;
     height: 4em; 
     border: 3px solid white;
@@ -36,7 +36,7 @@ body {
     font-family: "Montserrat";
 }
 
-#submit:hover{
+#submit:hover, #confirm-button:hover{
     background-color: rgba(100, 165, 189,0.6);
 }
 
@@ -68,6 +68,10 @@ body {
     color:black;
     font-family: "Montserrat";
     font-size: 1em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
 ::placeholder {
