Credit card and nav
updated sign up with credit card input, also changed to nav to only contain login and home.

--- a/html/signup.pug
+++ b/html/signup.pug
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+doctype html
+html(lang="en")
     head
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, maximum-scale=1.0")
@@ -22,6 +23,8 @@
                         input#signup-date-of-birth(type="date" required max="01-04-2023")
                     div 
                         input#signup-email(type="email" required placeholder="E-Mail")
+                    div 
+                        input#signup-credit-card(type="number" minlength="16" maxlength="16" required placeholder="Credit Card Number")
                     div        
                         input#signup-username(type="text" required placeholder="Username")   
                     div
