--- a/public/css/login_and_signup.css
+++ b/public/css/login_and_signup.css
@@ -7,12 +7,13 @@ body,html{
     overflow-x: hidden; 
 }
 
-body {
+body{
     background: linear-gradient(180deg, rgb(100, 165, 189) 0%, rgb(13, 51, 65) 50%);
     background-size: cover;
     font-family: "Montserrat";
     color: white;
     margin-bottom: 0;
+    height: 100vh;
 }
 
 .login-wrapper  h1, .sign-up-wrapper h1{
@@ -42,8 +43,9 @@ body {
 
 .login-wrapper, .sign-up-wrapper{
     background:linear-gradient(180deg, rgb(100, 165, 189) 0%, rgba(221,220,222,1) 50%, rgb(13, 51, 65) 100%);
-    height: 70%;
+    height: 70vh;
     width: 40vw;
+    background-size: cover;
     text-align: center;
     padding-top: 1em;
     transform-origin: top;
@@ -54,7 +56,7 @@ body {
     margin-top: 5em;
 }
 
-#username, #password, #signup-username, #signup-password, #signup-date-of-birth, #signup-name, #signup-email, #movie, #movie-time, #ticket-quantity{
+#username, #password, #signup-username, #signup-password, #signup-date-of-birth, #signup-name, #signup-email, #movie, #movie-time, #ticket-quantity, #signup-credit-card{
     padding: 0 5px;
     height: 40px;
     margin: 1em;
@@ -104,7 +106,7 @@ body {
 }
 
 @media(max-width: 900px){
-    #username, #password, #signup-username, #signup-password, #signup-date-of-birth, #signup-name, #signup-email, #submit, #movie, #movie-time, #ticket-quantity{
+    #username, #password, #signup-username, #signup-password, #signup-date-of-birth, #signup-name, #signup-email, #submit, #movie, #movie-time, #ticket-quantity, #confirm-button, #signup-credit-card{
         width: 17em;
     }
     .login-wrapper, .sign-up-wrapper{
@@ -113,7 +115,7 @@ body {
 }
 
 @media(max-height:847px){
-    #username, #password, #signup-username, #signup-password, #signup-date-of-birth, #signup-name, #signup-email, #submit, #movie, #movie-time, #ticket-quantity{
+    #username, #password, #signup-username, #signup-password, #signup-date-of-birth, #signup-name, #signup-email, #submit, #movie, #movie-time, #ticket-quantity, #confirm-button, #signup-credit-card{
         height: 2em;
         width: 10em;
     }
@@ -158,7 +160,7 @@ body {
     }
 }
 @media(max-width:350px) {
-    #username, #password, #signup-username, #signup-password, #signup-date-of-birth, #signup-name, #signup-email, #submit, #movie, #movie-time, #ticket-quantity{
+    #username, #password, #signup-username, #signup-password, #signup-date-of-birth, #signup-name, #signup-email, #submit, #movie, #movie-time, #ticket-quantity, #confirm-button, #signup-credit-card{
         width: 11em;
     }
     .sign-up-wrapper{
