file name changes
changed some file names for more consistency.

--- a/html/index-page-2.pug
+++ b/html/index-page-2.pug
@@ -54,5 +54,5 @@ html(lang="en")
         script(nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js")
         script(src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous")
         script(src="js/main.js")  
-        script(src="db/database2.js")
+        script(src="db/movie-page-two.js")
     footer
