--- a/html/login.pug
+++ b/html/login.pug
@@ -5,7 +5,7 @@ html(lang="en")
         meta(name="viewport" content="width=device-width, maximum-scale=1.0")
         meta(name="description" content="Starlight Cinema, a movie theater in the located in Utrecht.")
         title Seaside Cinema
-        link(rel="stylesheet", href="css/login_and_signup.css")
+        link(rel="stylesheet", href="css/form.css")
         link(rel="icon", href="images/logo.png" type="image/icon")  
         link(href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet")
     body
