--- a/public/css/main.css
+++ b/public/css/main.css
@@ -115,6 +115,7 @@ body {
 .login-link{
     border: 2px solid white;
     border-radius: .5em;
+    margin-left: 3em;
 }
 .navigation__links, .login-link{
     color: white;
