--- a/html/login.pug
+++ b/html/login.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
     head
         meta(charset="utf-8")
-        meta(name="viewport" content="width=device-width, maximum-scale=1.0")
+        meta(name="viewport" content="width=device-width, minimum-scale=1.0")
         meta(name="description" content="Starlight Cinema, a movie theater in the located in Utrecht.")
         title Seaside Cinema
         link(rel="stylesheet", href="css/form.css")
@@ -11,9 +11,8 @@ html(lang="en")
     body
         article 
             .login-wrapper
-                button.back-button
-                    a.back-button__link(href="index.html")  
-                        i(class="fa-solid fa-angle-left")
+                a.back-button__link(href="index.html")
+                    i(class="fa-solid fa-angle-left")
                 h1 Login
                 form.login-wrapper__form(method="post")  
                     div  
