--- a/html/signup.pug
+++ b/html/signup.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
     head
         meta(charset="utf-8")
-        meta(name="viewport" content="width=device-width, maximum-scale=1.0")
+        meta(name="viewport" content="width=device-width, minimum-scale=1.0")
         meta(name="description" content="Starlight Cinema, a movie theater in the located in Utrecht.")
         title Seaside Cinema
         link(rel="stylesheet", href="css/form.css")
@@ -11,20 +11,19 @@ html(lang="en")
     body
         article 
             .sign-up-wrapper
-                button.back-button
-                    a.back-button__link(href="index.html")  
-                        i(class="fa-solid fa-angle-left")
+                a.back-button__link(href="index.html")  
+                    i(class="fa-solid fa-angle-left")
                 h1 Sign up
                 form.sign-up-wrapper__form(method="post")  
                     div 
                         input#signup-name(type="text" required placeholder="Full Name")
                     div 
                             
-                        input#signup-date-of-birth(type="date" required max="01-04-2023")
+                        input#signup-date-of-birth(type="date" required max="2023-04-16")
                     div 
                         input#signup-email(type="email" required placeholder="E-Mail")
                     div 
-                        input#signup-credit-card(type="number" minlength="16" maxlength="16" required placeholder="Credit Card Number")
+                        input#signup-credit-card(type="number" required placeholder="Credit Card Number")
                     div        
                         input#signup-username(type="text" required placeholder="Username")   
                     div
