--- a/public/css/information.css
+++ b/public/css/information.css
@@ -183,8 +183,6 @@ body {
     background: linear-gradient(180deg, rgb(100, 165, 189) 0%, rgb(13, 51, 65) 50%);
     border-radius: 2em;
 
-    -moz-box-shadow: 0 0 50px #fff;
-    -webkit-box-shadow: 0 0 50px #fff;
     box-shadow: 0px 0px 30px #fff;
     margin-bottom: 4em;
 }
@@ -234,7 +232,7 @@ dd{
         z-index: 2;
     }
     .navigation--desktop{
-        display: absolute;
+        position: fixed;
         z-index: 2;
     }
     .navigation--desktop .navigation__links{
