--- a/public/css/main.css
+++ b/public/css/main.css
@@ -191,8 +191,6 @@ body {
     overflow: hidden;
     transform: scale(0.9, 0.9);
     transition: 1s all ease-in-out; 
-    -moz-box-shadow: 0 0 50px #fff;
-    -webkit-box-shadow: 0 0 50px #fff;
     box-shadow: 0px 0px 30px #fff;
 }
 .featured__image:hover{
@@ -304,7 +302,7 @@ body {
         z-index: 2;
     }
     .navigation--desktop{
-        display: absolute;
+        position: fixed;
         z-index: 2;
     }
     .navigation--desktop .navigation__links{
