--- a/html/nav.pug
+++ b/html/nav.pug
@@ -3,7 +3,7 @@ nav.navigation.navigation--desktop
         img.navigation__theater-logo(src="images/logo.png", alt="Logo of the Starlight Cinema") 
     ul.navigation__list
         li.navigation__list-item
-            a.navigation__links(href="/") Home
+            a.navigation__links(href="index.html") Home
             a.login-link.navigation__links(href="login.html") Login
     a.login-icon-link(href="login.html")
         i.login-icon__button(class="fa-solid fa-user")
