--- a/public/css/form.css
+++ b/public/css/form.css
@@ -98,6 +98,12 @@ body{
     color: rgba(13, 51, 65, 0.6);
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 @media(max-width: 900px){
     #username, #password, #signup-username, #signup-password, #signup-date-of-birth, #signup-name, #signup-email, #submit, #movie, #movie-time, #ticket-quantity, #confirm-button, #signup-credit-card{
         width: 17em;
