--- a/html/login.pug
+++ b/html/login.pug
@@ -17,7 +17,7 @@ html(lang="en")
                 form.login-wrapper__form(method="post")  
                     div  
                         ion-icon(name="person-sharp")       
-                        input#username(type="text" required placeholder="Username")   
+                        <input id="username" type="text" name="username" required placeholder="Username"> 
                     div
                         ion-icon(name="lock-closed-sharp")
                         input#password(type="password" name="password" minlength="8" required placeholder="Password")
