--- a/public/css/form.css
+++ b/public/css/form.css
@@ -56,7 +56,7 @@ body{
     margin-top: 5em;
 }
 
-#username, #password, #signup-username, #signup-password, #signup-date-of-birth, #signup-name, #signup-email, #movie, #movie-time, #ticket-quantity, #signup-credit-card{
+#username, #password, #signup-username, #signup-password, #signup-date-of-birth, #signup-first-name,#signup-last-name, #signup-email, #movie, #movie-time, #ticket-quantity, #signup-credit-card{
     padding: 0 5px;
     height: 40px;
     margin: 1em;
