--- a/public/css/information.css
+++ b/public/css/information.css
@@ -1,3 +1,4 @@
+/*this css file is used for the user information page*/
 *{
     margin: 0;
     padding: 0;
@@ -115,6 +116,7 @@ body {
 .login-link{
     border: 2px solid white;
     border-radius: .5em;
+    margin-left: 3em;
 }
 .navigation__links, .login-link{
     color: white;
